<resources>
    <string name="app_name">ToDoTask</string>

    <string name="title">Welcome Back!</string>
    <string name="newTask">New Task</string>
    <string name="save">Save</string>
    <string name="editTask">Editing Task..</string>
    <string name="hint">Insert Here..</string>
    <string name="menu">Menu</string>
    <string name="aboutUs">About Us</string>
    <string name="start">Click here to start your first task</string>
    <string name="youSure">Are you sure?</string>
    <string name="sureMessage">Do you want to delete this note?</string>

    <string name="team">Meet the team with Dedication\nJoin us Today!</string>
</resources>