<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editNote"
        android:textColor="@color/milkB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintVertical_bias="0.2"/>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NoteEditor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <EditText
            android:id="@+id/editTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:autofillHints="@string/newTask"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:gravity="top|start"/>

        <Button
            android:id="@+id/saveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_below="@+id/editTask"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:textColor="@color/milkB"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
